# hal_nuvoton

m48x/: CMakeLists.txt
